Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBNET.VB


    Private Class BTICSDB_64
        Public Declare Function BTICSDB_ChClear Lib "BTICSDB64.DLL" Alias "BTICSDB_ChClear" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ChConfig Lib "BTICSDB64.DLL" Alias "BTICSDB_ChConfig" (ByVal configval As UInt32, ByVal bitrateflag As UInt16, ByVal bytesperblock As UInt16, ByVal framespersecond As UInt16, ByVal blocksperframe As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_ChGetCount Lib "BTICSDB64.DLL" Alias "BTICSDB_ChGetCount" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_ChGetInfo Lib "BTICSDB64.DLL" Alias "BTICSDB_ChGetInfo" (ByVal infotype As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ChIsCSDB Lib "BTICSDB64.DLL" Alias "BTICSDB_ChIsCSDB" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ChIsRcv Lib "BTICSDB64.DLL" Alias "BTICSDB_ChIsRcv" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ChIsXmt Lib "BTICSDB64.DLL" Alias "BTICSDB_ChIsXmt" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_ChPause Lib "BTICSDB64.DLL" Alias "BTICSDB_ChPause" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_ChPauseCheck Lib "BTICSDB64.DLL" Alias "BTICSDB_ChPauseCheck" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTICSDB_ChResume Lib "BTICSDB64.DLL" Alias "BTICSDB_ChResume" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_ChStart Lib "BTICSDB64.DLL" Alias "BTICSDB_ChStart" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ChStop Lib "BTICSDB64.DLL" Alias "BTICSDB_ChStop" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_FilterClear Lib "BTICSDB64.DLL" Alias "BTICSDB_FilterClear" (ByVal basevaladdr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_FilterDefault Lib "BTICSDB64.DLL" Alias "BTICSDB_FilterDefault" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_FilterRd Lib "BTICSDB64.DLL" Alias "BTICSDB_FilterRd" (ByVal addrval As Int32, ByVal sival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_FilterSet Lib "BTICSDB64.DLL" Alias "BTICSDB_FilterSet" (ByVal configval As UInt32, ByVal addrval As Int32, ByVal simask As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_FilterWr Lib "BTICSDB64.DLL" Alias "BTICSDB_FilterWr" (ByVal msgaddr As UInt32, ByVal addrval As Int32, ByVal sival As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListDataRd Lib "BTICSDB64.DLL" Alias "BTICSDB_ListDataRd" (ByVal buf As Byte(), ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListDataWr Lib "BTICSDB64.DLL" Alias "BTICSDB_ListDataWr" (ByVal buf As Byte(), ByVal count As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListRcvCreate Lib "BTICSDB64.DLL" Alias "BTICSDB_ListRcvCreate" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_ListStatus Lib "BTICSDB64.DLL" Alias "BTICSDB_ListStatus" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ListXmtCreate Lib "BTICSDB64.DLL" Alias "BTICSDB_ListXmtCreate" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgBlockRd Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgBlockRd" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgBlockWr Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgBlockWr" (ByRef msgfields As MSGFIELDSCSDB, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgCreate Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgCreate" (ByVal configval As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_MsgDataByteRd Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgDataByteRd" (ByVal index As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Byte
        Public Declare Function BTICSDB_MsgDataByteWr Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgDataByteWr" (ByVal data As Byte, ByVal index As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_MsgDataRd Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgDataRd" (ByVal buf As Byte(), ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_MsgDataWr Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgDataWr" (ByVal buf As Byte(), ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_MsgIsAccessed Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgIsAccessed" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_MsgValidSet Lib "BTICSDB64.DLL" Alias "BTICSDB_MsgValidSet" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTICSDB_ParamAmplitudeConfig Lib "BTICSDB64.DLL" Alias "BTICSDB_ParamAmplitudeConfig" (ByVal configval As UInt32, ByVal dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ParamAmplitudeGet Lib "BTICSDB64.DLL" Alias "BTICSDB_ParamAmplitudeGet" (ByRef dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedBranch Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedBranch" (ByVal condition As UInt32, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedBuild Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedBuild" (ByVal nummsgs As Int32, ByVal msgs As UInt32(), ByVal freq As Int32(), ByVal interblockgap As Int32, ByVal rsvdblocks As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedCall Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedCall" (ByVal condition As UInt32, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedEntry Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedEntry" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedGap Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedGap" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedHalt Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedHalt" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedLog Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedLog" (ByVal condition As UInt32, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedMsg Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedMsg" (ByVal msgaddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedPause Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedPause" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedPulse Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedPulse" (ByVal dionum As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedRestart Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedRestart" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_SchedReturn Lib "BTICSDB64.DLL" Alias "BTICSDB_SchedReturn" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ChConfigEx Lib "BTICSDB64.DLL" Alias "BTICSDB_ChConfigEx" (ByVal configval As UInt32, ByVal bitrateflag As UInt16, ByVal bytesperblock As UInt16, ByVal framespersecond As UInt16, ByVal blocksperframe As UInt16, ByVal interbytegap As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_ChConfigExx Lib "BTICSDB64.DLL" Alias "BTICSDB_ChConfigExx" (ByVal configval As UInt32, ByVal count As UInt16, ByVal bitrateflag As UInt16, ByVal bytesperblock As UInt16, ByVal framespersecond As UInt16, ByVal blocksperframe As UInt16, ByVal interbytegap As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_CmdAddr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdAddr" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_CmdAlloc Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdAlloc" (ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_CmdAllocEx Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdAllocEx" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTICSDB_CmdBaseRd Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdBaseRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTICSDB_CmdBaseWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdBaseWr" (ByVal addrval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdClear Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdClear" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_CmdCountRd Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdCountRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_CmdCountWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdCountWr" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdCtrlRd Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdCtrlRd" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_CmdCtrlWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdCtrlWr" (ByVal ctrlval As UInt16, ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTICSDB_CmdCurrRd Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdCurrRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_CmdCurrWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdCurrWr" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Sub BTICSDB_CmdInit Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdInit" (ByVal opcode As UInt16, ByVal block As UInt16())
        Public Declare Function BTICSDB_CmdInsert Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdInsert" (ByVal block As UInt16(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTICSDB_CmdMaxLoopRd Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdMaxLoopRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTICSDB_CmdMaxLoopWr Lib "BTICSDB64.DLL" Alias "BTICSDB_CmdMaxLoopWr" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr)
